--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,16 +1,17 @@
-repos:
-  - repo: local
-    hooks:
-      - id: ruff
-        name: Ruff
-        entry: ruff check
-        language: system
-        types: [python]
-        args: [--fix] 
+ci: # NOTE: uses https://pre-commit.ci
+  autofix_prs: true
+  autoupdate_schedule: weekly
+  # skip: []
 
-      - id: isort
-        name: isort
-        entry: isort
-        language: system
+repos:
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    # Ruff version.
+    rev: v0.12.12
+    hooks:
+      # Run the linter.
+      - id: ruff-check
+        args: [--fix, --select, I]
         types: [python]
-        args: ["--profile", "black"]
+      # Run the formatter.
+      - id: ruff-format
+        types: [python]
